- redo code generation for @Trpc   - it uses a cool parser which allow to provide custom implemantation of it (Jackson/Avajeb)   - remove hardcode dependency to Jackson   - implement Java/Kotlin code generation   - implement success, void/empty and error reponses   - add protocol integration test   - ref #3863